<resources>
    <string name="app_name">HuongApp</string>
    <string name="header_main">MainActivity </string>
    <string name="edit_send">Input information to send ...</string>
    <string name="choose">Choose: </string>
    <string name="finish">Finish</string>
    <string name="rotation">Rotation</string>
    <string name="share">Share Text</string>
    <string name="second_activity">To Second Activity</string>
    <string name="btn_parcelable">Parcelable</string>
    <string name="btn_serializable">Serializable</string>
    <string name="btn_bundle">Bundle</string>
    <string name="single_top">SingleTop</string>
    <string name="single_task">SingleTask</string>
    <string name="single_instance">SingleInstance</string>
    <string name="single_instance_pre_task">SingleInstancePreTask</string>
    <string name="header_second">SecondActivity</string>
    <string name="back">Back</string>
    <string name="update_image">Update Image</string>
    <string name="header_standard">StandardActivity </string>
    <string name="header_single_top">SingleTopActivity </string>
    <string name="header_single_task">SingleTaskActivity </string>
    <string name="header_single_instance">SingleInstanceActivity </string>
    <string name="header_intent_flag">Intent Flag</string>
    <string name="method">Method: %s</string>
    <string name="label_task_id">Task ID: %1$d</string>
    <string name="label_instance">Instance: %1$s</string>
    <string name="label_start_time">Start Time: %1$s</string>
    <string name="label_is_foreground">Is Foreground: %1$s</string>
    <string name="value_true">true</string>
    <string name="value_false">false</string>
    <string name="time_format_pattern">EEE MMM dd HH:mm:ss z yyyy</string>
    <string name="click">Click </string>
    <string name="open_browser">Open Browser </string>
    <string name="user_name">Trương Trạch Vũ</string>
    <string name="search">Tìm kiếm...</string>
    <string name="description_ic_new">Lọc sản phẩm mới</string>
    <string name="description_ic_cart">Giỏ hàng</string>
    <string name="description_ic_search">Giỏ hàng</string>
    <string name="description_ic_filter">Lọc</string>
    <string name="filter_new">Mới cập nhật</string>
    <string name="description_ic_price">Lọc sản phẩm theo giá</string>
    <string name="filter_price">Lọc theo giá</string>
    <string name="category">Danh Mục</string>
    <string name="category_burger">Burger</string>
    <string name="category_pizza">Pizza</string>
    <string name="category_drink">Đồ uống</string>
    <string name="product">Danh sách món ăn:</string>
    <string name="all_in"><u>Xem tất cả</u></string>
    <string name="item_name_product1">Burger cá</string>
    <string name="item_name_product2">Pizza gà nướng BBQ</string>
    <string name="item_name_product3">Burger phô mai đôi</string>
    <string name="item_name_product4">Nước chanh</string>
    <string name="item_price_product1">65.000</string>
    <string name="item_price_product2">120.000</string>
    <string name="item_price_product3">95.000</string>
    <string name="item_price_product4">25.000</string>
    <string-array name="newest_filter_options">
        <item>Mới cập nhật</item>
        <item>Sản phẩm cũ</item>
    </string-array>
    <string-array name="price_filter_options">
        <item>Lọc theo giá</item>
        <item>Giá thấp đến cao</item>
        <item>Giá cao đến thấp</item>
    </string-array>
    <string name="btn_close_description">Đóng</string>
    <string name="btn_start_trial">Bắt đầu dùng thử miễn phí</string>
    <string name="btn_check">Check</string>
    <string name="main_number">100 000+</string>
    <string name="description_text">Người dùng tối ưu hóa hành trình\nghi chú suốt 3 năm qua</string>
    <string name="feature_no_ads">Trải nghiệm không quảng cáo</string>
    <string name="feature_unlimited_notes">Tạo ghi chú không giới hạn</string>
    <string name="feature_backup_support">Hỗ trợ sao lưu dữ liệu</string>
    <string name="bottom_note">Gia hạn tự động, có thể hủy bất cứ lúc nào</string>
    <string name="paywall_sale_title">Optimize Storage, Get Space</string>
    <string name="paywall_sale_price_old"><strike><b>%s</b>/week</strike></string>
    <string name="paywall_sale_price">%s</string>
    <string name="paywall_sale_week">/week</string>
    <string name="paywall_sale_off">OFF %d%%</string>
    <string name="paywall_sale_btn_offer">CLAIM OFFER</string>
    <string name="paywall_sale_content">%s for %s first week then %s next week.\n Billed weekly, cancel anytime.</string>
    <string name="paywall_sale_policy">By continuing you agree to our <u><b>Terms</b></u> and <u><b>Privacy policies</b></u>
        \n\u2022 Subscription gives you access to V9Compress\'s premium features, all ads will be removed.
        \n\u2022 Subscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.
        \n\u2022 You will not be charged if subscription is canceled before trial period ends.
        \n\u2022 Subscription is not required to use V9Compress</string>
    <string name="paywall_message">We couldn’t load the infomation</string>
    <string name="paywall_try_again"><u>Try again</u></string>
    <string name="paywall_onboarding_title">Shrink size keep quality</string>
    <string name="paywall_onboarding_yearly">Yearly</string>
    <string name="paywall_onboarding_weekly">Weekly</string>
    <string name="paywall_onboarding_content_yearly">%s after free trial ends.
        \nAuto renew, Cancel anytime</string>
    <string name="paywall_onboarding_content_lifetime">%s One-time purchase</string>
    <string name="paywall_onboarding_content_weekly">%s/week %d day after free trial ends.
        \nAuto renew, Cancel anytime</string>
    <string name="paywall_onboarding_content_yearly_direct">%s/year\nAuto renew, Cancel anytime</string>
    <string name="paywall_onboarding_content_weekly_direct">%s/week\nAuto renew, Cancel anytime</string>
    <string name="paywall_free_trial_disabled">Enable free trial?</string>
    <string name="paywall_free_trial_enabled">Free trial enabled</string>
    <string name="paywall_btn_free_trial_continue">CONTINUE</string>
    <string name="paywall_onboarding_btn_free">Try for free</string>
    <string name="paywall_onboarding_policy">By continuing you agree to our <u><b>Terms</b></u> and <u><b>Privacy policies</b></u>
        \nSubscription gives you access to V9Compress\'s premium features, all ads will be removed.
        \nSubscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.
        \nYou will not be charged if subscription is canceled before trial period ends.
        \nSubscription is not required to use V9Compress</string>
    <string name="dialog_weekly_title">Faster compress made simple</string>
    <string name="dialog_weekly_content">Try 3 days for FREE, then 8.99$ per week. Auto renew, cancel anytime</string>
    <string name="dialog_weekly_30">%d%%</string>
    <string name="dialog_weekly_30_off">OFF</string>
    <string name="dialog_weekly_btn_offer">CLAIM OFFER</string>
    <string name="dialog_weekly_policy">By continuing you agree to our <u><b>Terms</b></u> and <u><b>Privacy policies</b></u>
        \n\u2022 Subscription gives you access to V9Compress\'s premium features, all ads will be removed.
        \n\u2022 Subscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.
        \n\u2022 You will not be charged if subscription is canceled before trial period ends.
        \n\u2022 Subscription is not required to use V9Compress</string>
    <string name="dialog_weekly_message">We couldn’t load the infomation</string>
    <string name="dialog_weekly_again"><u>Try again</u></string>
    <string name="dialog_yearly_title">Faster Compress Made Simple</string>
    <string name="dialog_yearly_content">Try 3 for FREE then 8.99$ per year.
        \nAuto renew, cancel anytime.</string>
    <string name="dialog_yearly_30">%s%/OFF</string>
    <string name="dialog_yearly_btn_offer">CLAIM OFFER</string>
    <string name="dialog_yearly_policy">By continuing you agree to our <u><b>Terms</b></u> and <u><b>Privacy policies</b></u>
        \n\u2022 Subscription gives you access to V9Compress\'s premium features, all ads will be removed.
        \n\u2022 Subscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.
        \n\u2022 You will not be charged if subscription is canceled before trial period ends.
        \n\u2022 Subscription is not required to use V9Compress</string>
    <string name="dialog_yearly_message">We couldn’t load the infomation</string>
    <string name="dialog_yearly_again"><u>Try again</u></string>
    <string name="unlock_title">high-quality compression</string>
    <string name="unlock_content">%s/year after %d/%s free trial ends.\nAuto renew, cancel anytime</string>
    <string name="unlock_offer">%s → %s/tháng</string>
    <string name="unlock_btn_free">Try for free</string>
    <string name="unlock_btn_continue">Continue</string>
    <string name="unlock_policy">By continuing you agree to our <u><b>Terms</b></u> and <u><b>Privacy policies</b></u>
        \nSubscription gives you access to V9Compress\'s premium features, all ads will be removed.
        \nSubscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.
        \nYou will not be charged if subscription is canceled before trial period ends.
        \nSubscription is not required to use V9Compress</string>
    <string name="unlock_message">We couldn’t load the infomation</string>
    <string name="unlock_again"><u>Try again</u></string>
    <string name="paywall_bottom_sheet_title">SMARTER STORAGE MADE  AFFORDABLE</string>
    <string name="paywall_bottom_sheet_saved">Saved 92%</string>
    <string name="paywall_bottom_sheet_yearly_plan">Yearly Plan</string>
    <string name="paywall_bottom_sheet_yearly_plan_content">Only $0.412 per week</string>
    <string name="paywall_bottom_sheet_weekly_plan">Weekly Plan</string>
    <string name="paywall_bottom_sheet_yearly_plan_price">%s</string>
    <string name="paywall_bottom_sheet_weekly_plan_price">%s</string>
    <string name="paywall_bottom_sheet_yearly">/year</string>
    <string name="paywall_bottom_sheet_weekly">/week</string>
    <string name="paywall_bottom_sheet_content_yearly">%s/year after free trial ends.\nAuto renew, cancel anytime</string>
    <string name="paywall_bottom_sheet_content_weekly">%s/week after free trial ends.\nAuto renew, cancel anytime</string>
    <string name="paywall_bottom_sheet_content_trial_yearly">Auto renew at %s/year</string>
    <string name="paywall_bottom_sheet_content_trial_weekly">Auto renew at %s/week</string>
    <string name="paywall_bottom_sheet_free_trial">%d-day free trial enabled</string>
    <string name="paywall_bottom_sheet_cancel">Cancel anytime</string>
    <string name="paywall_bottom_sheet_btn_free">Try for free</string>
    <string name="paywall_bottom_sheet_policy">By continuing you agree to our <u><b>Terms</b></u> and <u><b>Privacy policies</b></u>
        \nSubscription gives you access to V9Compress\'s premium features, all ads will be removed.
        \nSubscription plans are automatically renewed and can be canceled anytime in Subscriptions on Google Play.
        \nYou will not be charged if subscription is canceled before trial period ends.
        \nSubscription is not required to use V9Compress</string>
    <string name="paywall_full_title">SMARTER STORAGE MADE  AFFORDABLE</string>
    <string name="paywall_full_saved">Saved 92%</string>
    <string name="paywall_full_yearly_plan">Yearly Plan</string>
    <string name="paywall_full_yearly_plan_content">Only $0.412 per week</string>
    <string name="paywall_full_yearly_plan_price">%s</string>
    <string name="paywall_full_year">/year</string>
</resources>