<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.PaywallSaleActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutGif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_pwl_sale_50"
        app:layout_constraintDimensionRatio="0.65"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_38sdp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_pw_sale_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnim"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/compress_pw_50" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_pw_view_offer"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingTop="@dimen/_18sdp"
        app:behavior_peekHeight="@dimen/_238sdp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/funnel_sans_semibold"
            android:gravity="center"
            android:text="@string/paywall_sale_title"
            android:textColor="@color/super_light"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtPriceOld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_54sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:alpha="0.5"
            android:fontFamily="@font/funnel_sans_bold"
            android:gravity="center"
            android:text="@string/paywall_sale_price_old"
            android:textColor="@color/super_light"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintEnd_toStartOf="@+id/txtOff"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layoutContent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_pw_off"
            android:fontFamily="@font/funnel_sans_bold"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_4sdp"
            android:paddingVertical="@dimen/_3sdp"
            android:text="@string/paywall_sale_off"
            android:textColor="@color/super_light"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtPriceOld"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtPriceOld" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="@font/funnel_sans_bold"
            android:text="@string/paywall_sale_price"
            android:textColor="@color/super_light"
            android:textSize="@dimen/_40sdp"
            app:layout_constraintEnd_toStartOf="@+id/txtWeek"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPriceOld" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/funnel_sans_bold"
            android:text="@string/paywall_sale_week"
            android:textColor="@color/super_light"
            android:textSize="@dimen/_24sdp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtPrice" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClaimOffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@drawable/bg_pw_btn_offer"
            android:fontFamily="@font/funnel_sans_extra_bold"
            android:paddingHorizontal="@dimen/_77sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/paywall_sale_btn_offer"
            android:textColor="@color/super_light"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPrice" />

        <ProgressBar
            android:id="@+id/pgbLoadInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_pw_btn_offer"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="@+id/btnClaimOffer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnClaimOffer" />

        <View
            android:id="@+id/viewDataLoading"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_85sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@drawable/bg_pw_view_data_loading"
            app:layout_constraintBottom_toTopOf="@+id/pgbLoadInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9sdp"
            android:fontFamily="@font/funnel_sans_medium"
            android:gravity="center"
            android:text="@string/paywall_sale_content"
            android:textColor="@color/super_light"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnClaimOffer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:fontFamily="@font/funnel_sans_regular"
            android:gravity="center"
            android:text="@string/paywall_sale_policy"
            android:textColor="@color/super_light"
            android:textSize="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtContent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layoutLoadFail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/txtPolicy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/funnel_sans_semibold"
                android:gravity="center"
                android:text="@string/paywall_message"
                android:textColor="@color/super_light"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTryAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:fontFamily="@font/funnel_sans_regular"
                android:gravity="center"
                android:text="@string/paywall_try_again"
                android:textColor="@color/super_light"
                android:textSize="@dimen/_10sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="txtPriceOld,txtOff,txtPrice,txtWeek,btnClaimOffer,txtContent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="pgbLoadInfo,viewDataLoading" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
